@@ -5,4 +5,3 @@ This is Gaia's main repository for Kodi 21 and later running at least Python 3.8
 
 # Support
 For more information and bug reports visit: [https://gaiakodi.com](https://gaiakodi.com)
-
